egress-external-https-proxy-integration/istio/poc/external-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-ext
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wikipedia-ext
spec:
  hosts:
  - www.wikipedia.org
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
---
apiVersion: v1
kind: Service
metadata:
  name: external-forward-proxy
spec:
  clusterIP: None
  ports:
  - protocol: TCP
    port: 3128
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-forward-proxy
subsets:
  - addresses:
    - ip: 192.168.56.10
    ports:
    - port: 3128
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-forward-proxy
spec:
  hosts:
  - external-forward-proxy.default.svc.cluster.local
  ports:
  - number: 3128
    name: tls
    protocol: TLS
  resolution: DNS
