egress-external-https-proxy-integration/istio/poc/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - www.google.com
    - www.wikipedia.org
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-tls-via-external-forward-proxy
spec:
  host: external-forward-proxy.default.svc.cluster.local
  subsets:
  - name: tunnel-google
    # trafficPolicy:
    #   tunneling:
    #     method: CONNECT
  - name: tunnel-wikipedia
    # trafficPolicy:
    #   tunneling:
    #     method: POST
    #     port: 8443
