egress-external-https-proxy-integration/istio/poc/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-outbound-traffic-through-egress-gateway
spec:
  hosts:
  - www.google.com
  - www.wikipedia.org
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.google.com
      - www.wikipedia.org
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - www.google.com
    route:
    - destination:
        host: external-forward-proxy.default.svc.cluster.local
        # subset: tunnel-google
        port:
          number: 3128
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - www.wikipedia.org
    route:
    - destination:
        host: external-forward-proxy.default.svc.cluster.local
        # subset: tunnel-wikipedia
        port:
          number: 3128
